--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,10 +14,15 @@ homepage = https://github.com/Infinidat/${project:name}
 company = Infinidat
 namespace_packages = ['infi']
 install_requires = [
+	'Flask',
+	'Flask-Mako',
 	'celery>=3.0',
 	'CherryPy>=3.5.0',
 	'docopt>=0.6.2',
 	'gevent>=1.0.1',
+	'infi.logging',
+	'infi.gevent-utils',
+	'infi.rpc',
 	'infi.execute>=0.0.19',
 	'infi.pyutils>=1.0.8',
 	'infi.traceback>=0.3.10',
@@ -28,7 +33,6 @@ install_requires = [
 	'pexpect>=3.3',
 	'python-cjson>=1.1.0',
 	'python-crontab==1.3',
-	'redis>=2.4.4',
 	'schematics>=0.9-1',
 	'setuptools>=5.7',
 	'waiting>=1.0.1',
@@ -94,7 +98,6 @@ eggs = ${development-scripts:eggs}
 [pack]
 recipe = infi.recipe.application_packager
 eggs = infi.app_repo
-	celery
 deb-dependencies = dpkg
 	alien
 	createrepo
@@ -102,7 +105,6 @@ deb-dependencies = dpkg
 	vsftpd
 	rng-tools
 	dpkg-sig
-	redis-server
 	nginx (>= 1.4.1)
 
 [sublime]
@@ -114,8 +116,6 @@ amqp = 1.4.6
 anyjson = 0.3.3
 argh = 0.25.0
 billiard = 3.3.0.18
-celery = 3.1.13
-CherryPy = 3.5.0
 collective.recipe.template = 1.11
 docopt = 0.6.2
 emport = 1.0.0
