--- a/buildout.cfg
+++ b/buildout.cfg
@@ -21,7 +21,7 @@ install_requires = [
 	'docopt>=0.6.2',
 	'gevent>=1.0.1',
 	'infi.logging',
-	'infi.gevent-utils',
+	'infi.gevent-utils>=0.1.4',
 	'infi.rpc',
 	'infi.execute>=0.0.19',
 	'infi.pyutils>=1.0.8',
