--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,20 +14,21 @@ homepage = https://github.com/Infinidat/${project:name}
 company = Infinidat
 namespace_packages = ['infi']
 install_requires = [
+	'docopt>=0.6.2',
 	'Flask',
 	'Flask-Mako',
-	'docopt>=0.6.2',
 	'gevent>=1.0.1',
-	'infi.logging',
-	'infi.gevent-utils>=0.1.4',
-	'infi.rpc',
 	'infi.execute>=0.0.19',
+	'infi.gevent-utils>=0.1.4',
+	'infi.logging',
 	'infi.pyutils>=1.0.8',
+	'infi.rpc',
 	'infi.traceback>=0.3.10',
 	'mako',
 	'pam>=0.1.4',
 	'passlib>=1.6.2',
 	'pexpect>=3.3',
+	'pyftpdlib',
 	'python-cjson>=1.1.0',
 	'python-crontab==1.3',
 	'schematics>=0.9-1',
