buildout.cfg: adding Flask-AutoIndex to requirements

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,7 @@ namespace_packages = ['infi']
 install_requires = [
 	'docopt>=0.6.2',
 	'Flask',
+	'Flask-AutoIndex',
 	'Flask-Mako',
 	'gevent>=1.0.1',
 	'infi.execute>=0.0.19',
