--- a/buildout.cfg
+++ b/buildout.cfg
@@ -30,6 +30,7 @@ install_requires = [
 	'passlib>=1.6.2',
 	'pexpect>=3.3',
 	'pyftpdlib',
+	'pysendfile',
 	'python-cjson>=1.1.0',
 	'python-crontab==1.3',
 	'schematics>=0.9-1',
