work-in-progress of a number of things
* breaking down the huge app_repo modules into smaller parts
* stable/unstable indexes
* pure-python ftp and web servers (removing the needed for external dependencies)
** separating rpc,web and ftp to separate processes

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -47,7 +47,7 @@ package_data = ['*.css', 'vsftpd.conf', '*.mako', 'gpg_batch_file', '*.png', '*.
 upgrade_code = {c9f562e3-f915-11e1-871f-1093e90fe436}
 product_name = Application Repository
 post_install_script_name = app_repo
-post_install_script_args = install
+post_install_script_args = setup production-defaults
 
 [isolated-python]
 recipe = infi.recipe.python
