--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,29 +14,29 @@ homepage = https://github.com/Infinidat/${project:name}
 company = Infinidat
 namespace_packages = ['infi']
 install_requires = [
-	'docopt>=0.6.2',
+	'docopt',
 	'Flask',
 	'Flask-AutoIndex',
 	'Flask-Mako',
-	'gevent>=1.0.1',
-	'infi.execute>=0.0.19',
-	'infi.gevent-utils>=0.1.4',
+	'gevent',
+	'infi.execute',
+	'infi.gevent-utils',
 	'infi.logging',
-	'infi.pyutils>=1.0.8',
+	'infi.pyutils',
 	'infi.rpc',
-	'infi.traceback>=0.3.10',
+	'infi.traceback',
 	'mako',
-	'pam>=0.1.4',
-	'passlib>=1.6.2',
-	'pexpect>=3.3',
+	'pam',
+	'passlib',
+	'pexpect',
 	'pyftpdlib',
 	'pysendfile',
-	'python-cjson>=1.1.0',
+	'python-cjson',
 	'python-crontab==1.3',
-	'schematics>=0.9-1',
-	'setuptools>=5.7',
-	'waiting>=1.0.1',
-	'zc.buildout>=2.2.1'
+	'schematics',
+	'setuptools',
+	'waiting',
+	'zc.buildout'
 	]
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
@@ -110,7 +110,4 @@ deb-dependencies = dpkg
 [sublime]
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
-
-[versions]
-setuptools = 5.7
 
