--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,7 @@ install_requires = [
 	'Flask-AutoIndex',
 	'Flask-Mako',
 	'gevent',
+	'httpie',
 	'infi.execute',
 	'infi.gevent-utils',
 	'infi.logging',
@@ -30,6 +31,7 @@ install_requires = [
 	'passlib',
 	'pexpect',
 	'pyftpdlib',
+	'pygments',
 	'pysendfile',
 	'python-cjson',
 	'python-crontab==1.3',
@@ -76,13 +78,13 @@ input = inline:
 [development-scripts]
 dependent-scripts = true
 recipe = infi.recipe.console_scripts
-eggs = ${project:name}
-	ipython
-	nose
-	mock
-	infi.unittest
+eggs = infi.nose_logbook
 	infi.traceback
-	infi.nose_logbook
+	${project:name}
+	infi.unittest
+	ipython
+	mock
+	nose
 interpreter = python
 
 [eclipse]
