ipython and httpie

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -96,6 +96,9 @@ eggs = ${development-scripts:eggs}
 
 [pack]
 recipe = infi.recipe.application_packager
+eggs = ${project:name}
+	ipython
+	httpie
 eggs = infi.app_repo
 deb-dependencies = dpkg
 	alien
