--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,26 +14,26 @@ homepage = https://github.com/Infinidat/${project:name}
 company = Infinidat
 namespace_packages = ['infi']
 install_requires = [
-	'docopt',
-	'Flask',
-	'Flask-AutoIndex',
-	'gevent',
-	'httpie',
-	'infi.execute',
-	'infi.gevent-utils',
-	'infi.logging',
-	'infi.pyutils',
-	'infi.rpc',
-	'infi.traceback',
-	'pyftpdlib',
+	'docopt>=0.6.2',
+	'Flask-AutoIndex>=0.5',
+	'Flask>=0.10.1',
+	'gevent>=1.0.1',
+	'httpie>=0.8.0',
+	'infi.execute>=0.1',
+	'infi.gevent-utils>=0.1.6',
+	'infi.logging>=0.4.2',
+	'infi.pyutils>=1.0.8',
+	'infi.rpc>=0.1.2',
+	'infi.traceback>=0.3.10',
+	'pyftpdlib>=1.4.0',
 	'pygments',
-	'pysendfile',
-	'python-cjson',
-	'requests',
-	'schematics',
-	'setuptools',
-	'waiting',
-	'zc.buildout'
+	'pysendfile>=2.0.1',
+	'python-cjson>=1.1.0',
+	'requests>=2.4.3',
+	'schematics>=0.9-1',
+	'setuptools>=7.0',
+	'waiting>=1.0.1',
+	'zc.buildout>=2.2.5'
 	]
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
@@ -95,9 +95,6 @@ eggs = ${development-scripts:eggs}
 
 [pack]
 recipe = infi.recipe.application_packager
-eggs = ${project:name}
-	ipython
-	httpie
 eggs = infi.app_repo
 deb-dependencies = dpkg
 	alien
@@ -109,4 +106,59 @@ deb-dependencies = dpkg
 [sublime]
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
+
+[versions]
+collective.recipe.template = 1.11
+distribute = 0.7.3
+docopt = 0.6.2
+emport = 1.0.0
+Flask = 0.10.1
+Flask-AutoIndex = 0.5
+Flask-Silk = 0.2
+gevent = 1.0.1
+git-py = 1.0.1
+gnureadline = 6.3.3
+greenlet = 0.4.5
+httpie = 0.8.0
+infi.exceptools = 0.2.9
+infi.execute = 0.1
+infi.gevent-utils = 0.1.6
+infi.logging = 0.4.2
+infi.monotonic-time = 0.1.5
+infi.nose-logbook = 1.0
+infi.os-info = 0.0.2
+infi.pyutils = 1.0.8
+infi.recipe.console-scripts = 0.3.15
+infi.recipe.template.version = 0.4.20
+infi.registry = 0.1.17
+infi.rpc = 0.1.2
+infi.traceback = 0.3.10
+infi.unittest = 1.1.0
+ipython = 2.3.0
+itsdangerous = 0.24
+Jinja2 = 2.7.3
+jsonpickle = 0.8.0
+Logbook = 0.7.0.4
+MarkupSafe = 0.23
+mock = 1.0.1
+msgpack-python = 0.4.2
+munch = 2.0.2
+nose = 1.3.4.1
+pyforge = 1.2.0
+pyftpdlib = 1.4.0
+Pygments = 1.6
+pysendfile = 2.0.1
+python-cjson = 1.1.0
+pyzmq = 13.1.0.4
+requests = 2.4.3
+schematics = 0.9-1
+sentinels = 0.0.6
+setuptools = 7.0
+six = 1.8.0
+waiting = 1.0.1
+Werkzeug = 0.9.6
+z3c.recipe.scripts = 1.0.1
+zc.buildout = 2.2.5
+zc.recipe.egg = 2.0.1
+zerorpc = 0.4.4.1
 
