TRIVIAL packing ipython

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -96,6 +96,7 @@ eggs = ${development-scripts:eggs}
 [pack]
 recipe = infi.recipe.application_packager
 eggs = infi.app_repo
+	ipython
 deb-dependencies = dpkg
 	alien
 	createrepo
