buildout.cfg: adding infi.docopt_completion to requirements

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -19,6 +19,7 @@ install_requires = [
 	'Flask>=0.10.1',
 	'gevent>=1.0.1',
 	'httpie>=0.8.0',
+	'infi.docopt_completion',
 	'infi.execute>=0.1',
 	'infi.gevent-utils>=0.1.6',
 	'infi.logging>=0.4.2',
