buildout.cfg: adding ipython to requirements

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,6 +26,7 @@ install_requires = [
 	'infi.pyutils>=1.0.8',
 	'infi.rpc>=0.1.2',
 	'infi.traceback>=0.3.10',
+	'ipython',
 	'pyftpdlib>=1.4.0',
 	'pygments',
 	'pysendfile>=2.0.1',
