--- a/buildout.cfg
+++ b/buildout.cfg
@@ -26,7 +26,7 @@ install_requires = [
 	'infi.pyutils>=1.0.8',
 	'infi.rpc>=0.1.2',
 	'infi.traceback>=0.3.10',
-	'ipython',
+	'ipython>=2.3.0',
 	'pyftpdlib>=1.4.0',
 	'pygments',
 	'pysendfile>=2.0.1',
@@ -105,6 +105,7 @@ deb-dependencies = dpkg
 	yum
 	rng-tools
 	dpkg-sig
+scripts = app_repo
 
 [sublime]
 recipe = corneti.recipes.codeintel
