TRIVIAL adapting to Logbook-0.8.1

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -75,11 +75,11 @@ input = inline:
 [development-scripts]
 dependent-scripts = true
 recipe = infi.recipe.console_scripts
-eggs = infi.nose_logbook
-	infi.traceback
+eggs = infi.traceback
 	${project:name}
 	infi.unittest
 	ipython
+	infi.nose_plugins
 	mock
 	nose
 interpreter = python
