--- a/buildout.cfg
+++ b/buildout.cfg
@@ -41,7 +41,18 @@ description = A user-friendly RPM/DEP repository
 long_description = A user-friendly RPM/DEB repository
 console_scripts = ['app_repo = infi.app_repo.scripts:app_repo']
 gui_scripts = []
-package_data = ['*.css', 'vsftpd.conf', '*.mako', 'gpg_batch_file', '*.png', '*.ico', 'nginx.conf', '*.js']
+package_data = [
+	'*.css',
+	'*.html',
+	'*.ico',
+	'*.js',
+	'*.mako',
+	'*.png',
+	'*.sh',
+	'gpg_batch_file',
+	'nginx.conf',
+	'vsftpd.conf'
+	]
 upgrade_code = {c9f562e3-f915-11e1-871f-1093e90fe436}
 product_name = Application Repository
 post_install_script_name = app_repo
