--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,7 @@ namespace_packages = ['infi']
 install_requires = [
 	'docopt>=0.6.2',
 	'Flask-AutoIndex>=0.5',
+	'Flask-Cors>=2.0.1',
 	'Flask>=0.10.1',
 	'gevent>=1.0.1',
 	'httpie>=0.9.2',
@@ -131,6 +132,7 @@ docopt = 0.6.2
 emport = 1.0.0
 Flask = 0.10.1
 Flask-AutoIndex = 0.5
+Flask-Cors = 2.0.1
 Flask-Silk = 0.2
 gevent = 1.0.1
 git-py = 1.0.1
