--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,28 +14,28 @@ homepage = https://github.com/Infinidat/${project:name}
 company = Infinidat
 namespace_packages = ['infi']
 install_requires = [
-	'docopt>=0.6.2',
-	'Flask-AutoIndex>=0.5',
-	'Flask-Cors>=2.0.1',
-	'Flask>=0.10.1',
-	'gevent>=1.0.1',
-	'httpie>=0.9.2',
-	'infi.docopt-completion>=0.2.6',
-	'infi.execute>=0.1.2',
-	'infi.gevent-utils>=0.2.1',
-	'infi.logging>=0.4.4',
-	'infi.pyutils>=1.0.8',
-	'infi.rpc>=0.2.2',
-	'infi.traceback>=0.3.11',
-	'ipython>=3.0.0',
-	'pyftpdlib>=1.4.0',
+	'docopt',
+	'Flask',
+	'Flask-AutoIndex',
+	'Flask-Cors',
+	'gevent',
+	'httpie',
+	'infi.docopt-completion',
+	'infi.execute',
+	'infi.gevent-utils',
+	'infi.logging',
+	'infi.pyutils',
+	'infi.rpc',
+	'infi.traceback',
+	'ipython',
+	'pyftpdlib',
 	'pygments',
-	'pysendfile>=2.0.1',
-	'requests>=2.6.0',
-	'schematics>=0.9.post1',
-	'setuptools>=14.3.1',
-	'waiting>=1.3.0',
-	'zc.buildout>=2.3.1'
+	'pysendfile',
+	'requests',
+	'schematics',
+	'setuptools',
+	'waiting',
+	'zc.buildout'
 	]
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
@@ -125,60 +125,4 @@ scripts = app_repo
 [sublime]
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
-
-[versions]
-collective.recipe.template = 1.11
-docopt = 0.6.2
-emport = 1.0.0
-Flask = 0.10.1
-Flask-AutoIndex = 0.5
-Flask-Cors = 2.0.1
-Flask-Silk = 0.2
-gevent = 1.0.1
-git-py = 1.0.1
-greenlet = 0.4.5.1
-httpie = 0.9.2
-infi.docopt-completion = 0.2.6
-infi.exceptools = 0.2.10
-infi.execute = 0.1.2
-infi.gevent-utils = 0.2.1
-infi.logging = 0.4.4
-infi.monotonic-time = 0.1.5
-infi.nose-plugins = 0.0.3
-infi.os-info = 0.1.6
-infi.pyutils = 1.0.8
-infi.recipe.console-scripts = 0.3.15
-infi.recipe.template.version = 0.4.23
-infi.registry = 0.1.17
-infi.rpc = 0.2.2
-infi.traceback = 0.3.11
-infi.unittest = 1.1.0
-ipython = 3.0.0
-itsdangerous = 0.24
-Jinja2 = 2.7.3
-jsonpickle = 0.9.2
-Logbook = 0.9.0
-lxml = 3.4.2
-MarkupSafe = 0.23
-mock = 1.0.1
-msgpack-python = 0.4.6
-munch = 2.0.2
-nose = 1.3.6.1
-pyforge = 1.2.0
-pyftpdlib = 1.4.0
-Pygments = 2.0.2
-pysendfile = 2.0.1
-python-cjson = 1.1.0
-pyzmq = 13.1.0.4
-requests = 2.6.0
-schematics = 0.9.post1
-sentinels = 0.0.6
-setuptools = 14.3.1
-six = 1.9.0
-waiting = 1.3.0
-Werkzeug = 0.10.1
-z3c.recipe.scripts = 1.0.1
-zc.buildout = 2.3.1
-zc.recipe.egg = 2.0.1
-zerorpc = 0.4.4.1
 
