--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,28 +14,28 @@ homepage = https://github.com/Infinidat/${project:name}
 company = Infinidat
 namespace_packages = ['infi']
 install_requires = [
-	'docopt>=0.6.2',
-	'Flask-AutoIndex>=0.6',
-	'Flask-Cors>=2.1.2',
-	'Flask>=0.10.1',
-	'gevent>=1.0.2',
-	'httpie>=0.9.3',
-	'infi.docopt-completion>=0.2.7',
-	'infi.execute>=0.1.4',
-	'infi.gevent-utils>=0.2.2',
-	'infi.logging>=0.4.6',
-	'infi.pyutils>=1.1.2',
-	'infi.rpc>=0.2.3',
-	'infi.traceback>=0.3.12',
-	'ipython>=4.1.2',
-	'pyftpdlib>=1.5.0',
-	'Pygments>=2.1.3',
-	'pysendfile>=2.0.1',
-	'requests>=2.9.1',
-	'schematics>=1.1.0.1',
-	'setuptools>=19.2.0.1',
-	'waiting>=1.3.0',
-	'zc.buildout>=2.5.0'
+	'docopt',
+	'Flask',
+	'Flask-AutoIndex',
+	'Flask-Cors',
+	'gevent',
+	'httpie',
+	'infi.docopt-completion',
+	'infi.execute',
+	'infi.gevent-utils',
+	'infi.logging',
+	'infi.pyutils',
+	'infi.rpc',
+	'infi.traceback',
+	'ipython',
+	'pyftpdlib',
+	'Pygments',
+	'pysendfile',
+	'requests',
+	'schematics',
+	'setuptools',
+	'waiting',
+	'zc.buildout'
 	]
 version_file = src/infi/app_repo/__version__.py
 description = A user-friendly RPM/DEP repository
@@ -104,72 +104,4 @@ scripts = app_repo
 [sublime]
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
-
-[versions]
-appnope = 0.1.0
-collective.recipe.template = 1.13
-decorator = 4.0.9
-docopt = 0.6.2
-emport = 1.1.3
-Flask = 0.10.1
-Flask-AutoIndex = 0.6
-Flask-Cors = 2.1.2
-Flask-Silk = 0.2
-future = 0.15.2
-gevent = 1.0.2
-git-py = 1.0.1
-gnureadline = 6.3.3
-greenlet = 0.4.9
-httpie = 0.9.3
-infi.docopt-completion = 0.2.7
-infi.exceptools = 0.2.11
-infi.execute = 0.1.4
-infi.gevent-utils = 0.2.2
-infi.logging = 0.4.6
-infi.monotonic-time = 0.1.6
-infi.nose-plugins = 0.0.6
-infi.os-info = 0.1.7
-infi.pyutils = 1.1.2
-infi.recipe.console-scripts = 0.3.16
-infi.recipe.template.version = 0.4.23
-infi.registry = 0.1.18
-infi.rpc = 0.2.3
-infi.traceback = 0.3.12
-infi.unittest = 1.1.0
-ipython = 4.1.2
-ipython-genutils = 0.1.0
-itsdangerous = 0.24
-Jinja2 = 2.8
-jsonpickle = 0.9.3
-Logbook = 0.12.5
-MarkupSafe = 0.23
-mock = 1.0.1
-msgpack-python = 0.4.7
-munch = 2.0.4
-nose = 1.3.7.1
-packaging = 16.5
-path.py = 8.1.2
-pexpect = 4.0.1
-pickleshare = 0.6
-ptyprocess = 0.5.1
-pyforge = 1.2.0
-pyftpdlib = 1.5.0
-Pygments = 2.1.3
-pyparsing = 2.1.4
-pysendfile = 2.0.1
-python-cjson = 1.1.0
-pyzmq = 13.1.0.4
-requests = 2.9.1
-schematics = 1.1.0.1
-sentinels = 0.0.6
-setuptools = 19.2.0.1
-simplegeneric = 0.8.1
-six = 1.10.0
-traitlets = 4.2.1
-waiting = 1.3.0
-Werkzeug = 0.11.4
-z3c.recipe.scripts = 1.0.1
-zc.buildout = 2.5.0
-zc.recipe.egg = 2.0.3
-zerorpc = 0.5.1
 
