ipython 6 does not support Python 2.7

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,7 +27,7 @@ install_requires = [
 	'infi.pyutils',
 	'infi.rpc',
 	'infi.traceback',
-	'ipython',
+	'ipython<6',
 	'pyftpdlib',
 	'Pygments',
 	'pysendfile',
