--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ newest = false
 prefer-final = false
 download-cache = .cache
 develop = .
-parts =
+parts = 
 
 [project]
 name = infi.app_repo
@@ -14,28 +14,28 @@ homepage = https://github.com/Infinidat/${project:name}
 company = Infinidat
 namespace_packages = ['infi']
 install_requires = [
-	'docopt',
-	'Flask',
-	'Flask-AutoIndex',
-	'Flask-Cors',
-	'gevent',
-	'httpie',
-	'infi.docopt-completion',
-	'infi.execute',
-	'infi.gevent-utils',
-	'infi.logging',
-	'infi.pyutils',
-	'infi.rpc',
-	'infi.traceback',
+	'docopt>=0.6.2',
+	'Flask-AutoIndex>=0.6',
+	'Flask-Cors>=3.0.3',
+	'Flask>=0.12.2',
+	'gevent>=1.2.1',
+	'httpie>=0.9.9',
+	'infi.docopt-completion>=0.2.8',
+	'infi.execute>=0.1.7',
+	'infi.gevent-utils>=0.2.3',
+	'infi.logging>=0.4.7',
+	'infi.pyutils>=1.1.3',
+	'infi.rpc>=0.2.5',
+	'infi.traceback>=0.3.15',
 	'ipython<6',
-	'pyftpdlib',
-	'Pygments',
-	'pysendfile',
-	'python-dateutil',
-	'requests',
-	'schematics',
+	'pyftpdlib>=1.5.3',
+	'Pygments>=2.2.0',
+	'pysendfile>=2.0.1',
+	'python-dateutil>=2.6.1',
+	'requests>=2.18.4',
+	'schematics>=1.1.0.1',
 	'setuptools',
-	'waiting',
+	'waiting>=1.4.1',
 	'zc.buildout'
 	]
 version_file = src/infi/app_repo/__version__.py
@@ -105,4 +105,78 @@ scripts = app_repo
 [sublime]
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
+
+[versions]
+appnope = 0.1.0
+backports.shutil-get-terminal-size = 1.0.0
+certifi = 2017.11.5
+chardet = 3.0.4
+click = 6.7
+collective.recipe.template = 2.0
+decorator = 4.1.2
+docopt = 0.6.2
+emport = 1.2.0
+enum34 = 1.1.6
+Flask = 0.12.2
+Flask-AutoIndex = 0.6
+Flask-Cors = 3.0.3
+Flask-Silk = 0.2
+future = 0.16.0
+gevent = 1.2.1
+git-py = 1.0.2
+greenlet = 0.4.12
+httpie = 0.9.9
+idna = 2.6
+infi.docopt-completion = 0.2.8
+infi.exceptools = 0.2.13
+infi.execute = 0.1.7
+infi.gevent-utils = 0.2.3
+infi.logging = 0.4.7
+infi.monotonic-time = 0.1.8
+infi.nose-plugins = 0.0.7
+infi.os-info = 0.1.9
+infi.pyutils = 1.1.3
+infi.recipe.console-scripts = 0.5.1
+infi.recipe.template.version = 0.4.29
+infi.registry = 0.1.20
+infi.rpc = 0.2.5
+infi.traceback = 0.3.15
+infi.unittest = 1.1.0
+ipython = 5.4.1
+ipython-genutils = 0.2.0
+itsdangerous = 0.24
+Jinja2 = 2.10
+jsonpickle = 0.9.5
+Logbook = 1.1.0
+MarkupSafe = 1.0
+mock = 1.0.1
+msgpack-python = 0.4.8
+munch = 2.2.0
+nose = 1.3.7.1
+packaging = 16.8
+pathlib2 = 2.3.0
+pexpect = 4.3.1
+pickleshare = 0.7.4
+prompt-toolkit = 1.0.15
+ptyprocess = 0.5.2
+pyforge = 1.3.0
+pyftpdlib = 1.5.3
+Pygments = 2.2.0
+pyparsing = 2.2.0
+pysendfile = 2.0.1
+python-cjson = 1.1.0
+python-dateutil = 2.6.1
+pyzmq = 13.1.0.4
+requests = 2.18.4
+scandir = 1.6
+schematics = 1.1.0.1
+sentinels = 1.0.0
+simplegeneric = 0.8.1
+six = 1.11.0
+traitlets = 4.3.2
+urllib3 = 1.22
+waiting = 1.4.1
+wcwidth = 0.1.7
+Werkzeug = 0.14.1
+zerorpc = 0.6.1
 
