APR-94 update post_install_script_args in buildout.cfg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -61,7 +61,7 @@ package_data = [
 upgrade_code = {c9f562e3-f915-11e1-871f-1093e90fe436}
 product_name = Application Repository
 post_install_script_name = eapp_repo
-post_install_script_args = setup production-defaults
+post_install_script_args = setup
 
 [isolated-python]
 recipe = infi.recipe.python
