TRIVIAL freezing schematics to 1.1.0.1
With the new version the tests are failing

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ newest = false
 prefer-final = false
 download-cache = .cache
 develop = .
-parts = 
+parts =
 
 [project]
 name = infi.app_repo
@@ -33,7 +33,7 @@ install_requires = [
 	'pysendfile',
 	'python-dateutil',
 	'requests',
-	'schematics',
+	'schematics==1.1.0.1',
 	'setuptools',
 	'waiting',
 	'zc.buildout'
@@ -106,3 +106,5 @@ scripts = app_repo
 recipe = corneti.recipes.codeintel
 eggs = ${development-scripts:eggs}
 
+[versions]
+schematics = 1.1.0.1
