--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,7 +33,7 @@ install_requires = [
 	'pysendfile',
 	'python-dateutil',
 	'requests',
-	'schematics==1.1.0.1',
+	'schematics<1.1.1',
 	'setuptools',
 	'waiting',
 	'zc.buildout'
