APR-133 pin Werkzeug to 0.16.0, fix import of ProxyFix
Pin Werkzeug to 0.16.0 due to https://github.com/general03/flask-autoindex/issues/53
Import ProxyFix from werkzeug.middleware.proxy_fix instead of werkzeug.contrib
because werkzeug.contrib was deprecated in 0.15.0: https://palletsprojects.com/blog/werkzeug-0-15-0-released/

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ newest = false
 prefer-final = false
 download-cache = .cache
 develop = .
-parts = 
+parts =
 
 [project]
 name = infi.app_repo
@@ -36,6 +36,7 @@ install_requires = [
 	'schematics<1.1.1',
 	'setuptools',
 	'waiting',
+	'werkzeug<=0.16.0',
 	'zc.buildout'
 	]
 version_file = src/infi/app_repo/__version__.py
@@ -108,4 +109,4 @@ eggs = ${development-scripts:eggs}
 
 [versions]
 schematics = 1.1.0.1
-
+werkzeug = 0.16.0
